@@ -110,7 +110,7 @@ class Options:
                 'noheaders', 'noupdate', 'output=', 'version', 'vmstat'])
         except getopt.error, exc:
             print 'dstat: %s, try dstat -h for a list of all the options' % str(exc)
-            exit(1)
+            sys.exit(1)
 
         self.modlist = []
 
@@ -187,10 +187,10 @@ class Options:
             elif opt in ['-h', '--help']:
                 self.usage()
                 self.help()
-                exit(0)
+                sys.exit(0)
             elif opt in ['-V', '--version']:
                 self.version()
-                exit(0)
+                sys.exit(0)
 
         if not self.modlist:
             self.modlist = [ 'cpu', 'disk', 'net', 'page', 'sys' ]
@@ -200,11 +200,11 @@ class Options:
             if len(args) > 1: self.count = int(args[1])
         except:
             print 'dstat: incorrect argument, try dstat -h for the correct syntax'
-            exit(1)
+            sys.exit(1)
 
         if self.delay <= 0:
             print 'dstat: delay must be an integer, greater than zero'
-            exit(1)
+            sys.exit(1)
 
     def version(self):
         print 'Dstat %s' % VERSION
